@@ -7,7 +7,6 @@ Powered By
 * Log tracking Server at FPT Online, VnExpress.net (http://l.a.eclick.vn)
 * Log tracking Server at FPT Online, Advertising Network Eclick.vn (http://c.d.eclick.vn, http://t.d.eclick.vn)
 * The Platform for saving interested text to user's dropbox (http://nguyentantrieu.info/blog/save2mycloud-store-your-useful-information-in-dropbox)
-    
 
 RUN:
 
@@ -15,9 +14,8 @@ RUN:
     added to the path and JAVA_HOME set to run 
     the server.
 
-    >run.sh OR
-    >run.bat OR
-    >/usr/lib/jvm/jdk1.8.0/bin/java -jar -Xms256M -Xmx1048M  -server  -XX:+UseCompressedOops -X+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:+CMSScavengeBeforeRemark -XX:+DisableExplicitGC -Djava.awt.headless=true http-server.jar
+    >start-server.sh OR    
+    >/usr/lib/jvm/jdk1.8.0/bin/java -jar -Xms256M -Xmx1048M  -server  -XX:+UseCompressedOops -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:+CMSScavengeBeforeRemark -XX:+DisableExplicitGC -Djava.awt.headless=true http-server.jar
     
     ##IMPORTANT##
 
